crates/swc_ecma_parser/tests/test262-error-references/fail/d87d9282d45bd345.js.stderr
error: Identifier cannot follow number
 --> $DIR/tests/test262-parser/fail/d87d9282d45bd345.js:1:3
  |
1 | 08a
  |   ^

